# law

./: .env.example  .gitignore  AGENTS.md  COMPLIANCE.md  Dockerfile  IMPROVEMENTS.md  Makefile  PRIVACY.md  PROJECT_OVERVIEW.md  README.md  SECURITY.md  TESTING.md  TESTING_GUIDE.md  TODOS.md  UV_GUIDE.md  cache_manager.py  config.py  data_loader.py  docker-compose.yml  eda.ipynb  main.py  manage.py  model_manager.py  models.py  package-lock.json  package.json  pnpm-workspace.yaml  pyproject.toml  pytest.ini  retrievers.py  run_api.py  run_enhanced_tests.sh  run_tests.py  test_api.py  test_embedding_offline.py  test_main.py  test_server.py  turbo.json
.github/: copilot-instructions.md
.github/workflows/: ci-cd.yml
.reports/: dead-code-analysis.md
aihub_data/: 06_datasets copy.ipynb  154_datasets.ipynb
apps/agent-orchestrator/: README.md
apps/api/: pyproject.toml  transcribe_jobs.db
apps/api/app/: __init__.py  db.py  main.py  worker.py
apps/api/app/routers/: transcribe.py
apps/api/tests/: conftest.py  test_cli_package.py  test_file_pipeline.py  test_law_go_kr.py  test_multi_turn_chat_manager.py  test_opensearch_load.py  test_opensearch_security.py  test_pg_load_jsonl.py  test_r2_integration.py  test_response_builder.py  test_share_api.py  test_share_service_engine.py  test_streaming_tool_calls.py
apps/api/tests/workspace/: test_service.py
apps/audit-service/: README.md
apps/eval-service/: README.md
apps/gateway-api/: README.md
apps/ingest-service/: README.md
apps/notification-service/: README.md
apps/policy-service/: README.md
apps/rag-service/: __init__.py  app.py
apps/redteam-service/: README.md
apps/web/: ARCHITECTURE.md  AUTH_README.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  ROOT_AUTH_IMPLEMENTATION.md  TESTING_GUIDE.md  WORKSPACE_COMPLETE.md  WORKSPACE_INTEGRATION.md  WORKSPACE_QUICKSTART.md  eslint.config.mjs  next.config.ts  (+3 more)
docs/: cloudflare-projects-guide.md  cloudflare-r2-integration.md  fix-project-chats-schema.md  how-to-use-law-cli.md  r2-integration-summary.md  share-service-overview.md  workspace-api-implementation.md  workspace-api-overview.md  workspace-migration-setup.md  workspace-schema-cleanup-summary.md
infra/: compose.yaml
notebooks/: whisper-finetune-bingsu-zeroth-korean.ipynb
opensearch-nori-knn/: README.md  docker-compose.yml
scripts/: create_workspace_tables.py  export_hf_judgments.py  full_data_to_datasets.py  import_hf_casename.py  init_workspace_db.py  meilisearch_load.py  opensearch_load.py  pg_load_jsonl.py  render_workspace_enums.py  run_workspace_migrations.py  supabase_load.py  timexer_ohlc_predictor.py
test_reports/: report.html  summary.json
tests/: __init__.py  conftest.py  test_api_server_chat.py  test_cli_package.py  test_comprehensive.py  test_coverage.py  test_duckdb_search.py  test_e2e.py  test_exceptions.py  test_keyword_search.py  test_law_go_kr.py  test_lexical_search.py  test_meilisearch_load.py  test_model_manager.py  test_multi_turn_chat_manager.py  test_opensearch_load.py  test_performance.py  test_pg_load_jsonl.py  test_r2_integration.py  test_share_api.py  test_share_service_engine.py  test_streaming_tool_calls.py  test_stress.py  test_unit.py  test_utils.py
(+95 files in other folders)
