[project]
name = "law"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.7",
    "langchain>=0.3,<0.4",
    "langchain-openai>=0.2",
    "langchain-google-genai>=1.0",
    "langgraph>=0.6.0,<0.7",
    "python-dotenv>=1.0",
    "structlog>=24.4",
    "psycopg[binary]>=3.2.10",
]

[project.scripts]
law = "main:main"
