[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "api"
version = "0.1.0"
description = "FastAPI service"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.8",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "alembic>=1.13",
    "python-dotenv>=1.0",
    "structlog>=24.4",
    "httpx>=0.27",
    "law-shared",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "types-requests",
]

[tool.uv]
dev-dependencies = ["api[dev]"]

[tool.setuptools.packages.find]
where = ["app"]

[tool.uv.sources]
law-shared = { path = "../../packages/py-shared" }
